2022-04-06T16:08:53Z:
* notice: last 14d: all unq: 2372 41
* notice: prev accum: outdated-all outdated-unq / all unq: 11265 281 / 13648 397
* notice: next accum: outdated-all outdated-unq / all unq: 11265 281 / 13637 396
* notice: prev json diff // prev day diff: unq all: +0 +53 / -1 -64 // +4 +159 / -1 -147

2022-04-06T08:08:57Z:
* notice: last 14d: all unq: 2383 42
* notice: prev accum: outdated-all outdated-unq / all unq: 11265 281 / 13666 395
* notice: next accum: outdated-all outdated-unq / all unq: 11265 281 / 13648 397
* notice: prev json diff // prev day diff: unq all: +2 +50 / -0 -68 // +4 +106 / -0 -83

2022-04-06T00:33:51Z:
* notice: last 14d: all unq: 2401 42
* notice: prev accum: outdated-all outdated-unq / all unq: 11113 278 / 13493 393
* notice: next accum: outdated-all outdated-unq / all unq: 11265 281 / 13666 395
* notice: prev json diff // prev day diff: unq all: +2 +56 / -0 -15 // +2 +56 / -0 -15

2022-04-05T16:08:57Z:
* notice: last 14d: all unq: 2380 42
* notice: prev accum: outdated-all outdated-unq / all unq: 11113 278 / 13490 393
* notice: next accum: outdated-all outdated-unq / all unq: 11113 278 / 13493 393
* notice: prev json diff // prev day diff: unq all: +0 +52 / -0 -49 // +2 +158 / -0 -132

2022-04-05T08:09:34Z:
* notice: last 14d: all unq: 2377 42
* notice: prev accum: outdated-all outdated-unq / all unq: 11113 278 / 13504 391
* notice: next accum: outdated-all outdated-unq / all unq: 11113 278 / 13490 393
* notice: prev json diff // prev day diff: unq all: +2 +52 / -0 -66 // +2 +106 / -0 -83

2022-04-05T00:31:29Z:
* notice: last 14d: all unq: 2391 42
* notice: prev accum: outdated-all outdated-unq / all unq: 10961 276 / 13332 391
* notice: next accum: outdated-all outdated-unq / all unq: 11113 278 / 13504 391
* notice: prev json diff // prev day diff: unq all: +0 +54 / -0 -17 // +0 +54 / -0 -17

2022-04-04T16:08:52Z:
* notice: last 14d: all unq: 2371 42
* notice: prev accum: outdated-all outdated-unq / all unq: 10961 276 / 13331 391