@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-04-06T16:08:53Z",
-  "count_outdated" : 11265,
-  "uniques_outdated" : 281,
-  "count" : 13637,
-  "uniques" : 396,
+  "timestamp" : "2022-04-07T00:34:50Z",
+  "count_outdated" : 11454,
+  "uniques_outdated" : 299,
+  "count" : 13821,
+  "uniques" : 397,
   "clones" : [
     {
-      "timestamp": "2022-03-23T00:00:00Z",
-      "count": 42,
-      "count_minmax": [ 0, 189 ],
-      "uniques": 17,
-      "uniques_minmax": [ 0, 18 ]
-    },
-    {
       "timestamp": "2022-03-24T00:00:00Z",
-      "count": 173,
+      "count": 156,
       "count_minmax": [ 0, 173 ],
       "uniques": 8,
       "uniques_minmax": [ 0, 8 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-04-06T00:00:00Z",
-      "count": 101,
-      "count_minmax": [ 0, 101 ],
+      "count": 155,
+      "count_minmax": [ 0, 155 ],
       "uniques": 2,
       "uniques_minmax": [ 0, 2 ]
     }
