@@ -1,15 +1,10 @@
 {
-  "count": 2372,
-  "uniques": 41,
+  "count": 2367,
+  "uniques": 35,
   "clones": [
     {
-      "timestamp": "2022-03-23T00:00:00Z",
-      "count": 42,
-      "uniques": 17
-    },
-    {
       "timestamp": "2022-03-24T00:00:00Z",
-      "count": 173,
+      "count": 156,
       "uniques": 8
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-04-06T00:00:00Z",
-      "count": 101,
+      "count": 155,
       "uniques": 2
     }
   ]
